--- a/back/front/index.html
+++ b/back/front/index.html
@@ -12,9 +12,9 @@
         content="성공적인 일정, 중요도와 긴급성을 기준으로 우선 순위를 세워 성공적인 일정을 만듭니다."
     />
     <!-- 파비콘 -->
-    <link rel="icon" href="img/favicon.ico"/>
+    <link rel="icon" href="./img/favicon.ico"/>
     <!-- 아이폰 파비콘 -->
-    <link rel="apple-touch-icon" href="img/favicon.ico">
+    <link rel="apple-touch-icon" href="./img/favicon.ico">
     <!-- font-awesome-icon -->
     <link 
         rel="stylesheet" 
@@ -33,13 +33,13 @@
         <div class="inner">
             <div class="header-container">
                 <div class="title">
-                    <a href="#">성공일정</a>
+                    <a href="https://www.seongong.store/" target="_self">성공일정</a>
                 </div>
                 <!-- title -->
                 <div class="sign-container">
                     <div class="unsigned">
-                        <div class="sign-in">로그인</div>
-                        <div class="sign-up">회원가입</div>
+                        <a href="signin.html" class="sign-in">로그인</a>
+                        <a href="signup.html" class="sign-up">회원가입</a>
                     </div>
                     <!-- unsigned -->
                     <div class="signed">
