--- a/back/front/signup.html
+++ b/back/front/signup.html
@@ -32,13 +32,13 @@
         <div class="inner">
             <div class="header-container">
                 <div class="title">
-                    <a href="#">성공일정</a>
+                    <a href="https://www.seongong.store/" target="_self">성공일정</a>
                 </div>
                 <!-- title -->
                 <div class="sign-container">
                     <div class="unsigned">
-                        <div class="sign-in">로그인</div>
-                        <div class="sign-up">회원가입</div>
+                        <a href="signin.html" class="sign-in">로그인</a>
+                        <a href="signup.html" class="sign-up">회원가입</a>
                     </div>
                     <!-- unsigned -->
                     <div class="signed hidden">
